add button and style

--- a/css/style.css
+++ b/css/style.css
@@ -440,9 +440,18 @@ address a:active {
 }
 
 .some_content {
-  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 16px;
   background-color: lightcyan;
   padding: 20px;
+  margin-top: 30px;
+  text-indent: 50px;
 }
 
 .some_content .history_content {
@@ -491,4 +500,37 @@ address a:active {
 
 .some_content .scients_works_content:target {
   display: block;
+}
+
+.some_content .some_content_block {
+  padding: 10px;
+}
+
+.some_content .back_to_nav_link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.some_content .back_to_nav_link .back_to_nav {
+  width: 150px;
+  height: 30px;
+  background-color: goldenrod;
+  -webkit-transition: 0.1s;
+  -o-transition: 0.1s;
+  transition: 0.1s;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.some_content .back_to_nav_link .back_to_nav:hover {
+  background-color: khaki;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
 }
