--- a/scss/style.scss
+++ b/scss/style.scss
@@ -302,9 +302,13 @@ address {
 }
 
 .some_content {
-    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
     background-color: lightcyan;
     padding: 20px;
+    margin-top: 30px;
+    text-indent: 50px;
 
     .history_content {
         display: none;
@@ -345,6 +349,29 @@ address {
         display: none;
         &:target {
             display: block;
+        }
+    }
+
+    .some_content_block {
+        padding: 10px;
+    }
+
+    .back_to_nav_link {
+        display: flex;
+        justify-content: center;
+
+        .back_to_nav {
+            width: 150px;
+            height: 30px;
+            background-color: goldenrod;
+            transition: 0.1s;
+            justify-items: center;
+            align-items: center;
+
+            &:hover {
+                background-color: khaki;
+                transition: 0.3s;
+            }
         }
     }
 }
