--- a/css/style.css
+++ b/css/style.css
@@ -506,29 +506,55 @@ address a:active {
   padding: 10px;
 }
 
-.some_content .back_to_nav_link {
+.some_content .main_back_to_nav_link_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 150px;
+  height: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.some_content .main_back_to_nav_link_wrapper .back_to_nav_link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 
-.some_content .back_to_nav_link .back_to_nav {
+.some_content .main_back_to_nav_link_wrapper .back_to_nav_link .back_to_nav {
   width: 150px;
   height: 30px;
   background-color: goldenrod;
   -webkit-transition: 0.1s;
   -o-transition: 0.1s;
   transition: 0.1s;
-  justify-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.some_content .back_to_nav_link .back_to_nav:hover {
+.some_content .main_back_to_nav_link_wrapper .back_to_nav_link .back_to_nav:hover {
   background-color: khaki;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
